--- a/Sexualities.html
+++ b/Sexualities.html
@@ -1,8 +1,31 @@
-<link rel="stylesheet" type="text/css" href="Main.css">
 <html>
-
-<h2><uol> <text style=color:blue>DIFFERENT TYPES OF SEXUALITIES</text></h2>
-
+	<head>
+		
+		<!-- Latest compiled and minified CSS -->
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+		
+		<!-- Optional theme -->
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+		
+		<!-- Latest compiled and minified JavaScript -->
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+		<link rel="stylesheet" type="text/css" href="style.css">
+	</head>
+<nav class="navbar navbar-default">
+						<div  class="collapse navbar-collapse">
+							<ul class="nav navbar-nav">   
+								<li><a href="index.html">Home</a></li>
+								<li><a href="Sexualities.html">Sexualities</a></li>
+								<li><a href="Genders.html">Genders</a></li>
+								<li><a href="StoriesPage.html">Stories</a></li>
+								<li><a href="News.html">LGBTQ+ In The News</a></li>
+							</ul>
+						</div>
+					</nav>
+	<div class="text">
+	
+<h2><ul> <text style=color:white>DIFFERENT TYPES OF SEXUALITIES</text></h2>
+	Sexuality is more than your body parts,it is also about your gender identity and sexual orientation. Many people have different types of sexual desires that diverge from  heterosexuality. Here a few:
 <li> <a href="http://www.merriam-webster.com/dictionary/gay">Gay</a></li>
 <li> <a href="http://www.merriam-webster.com/dictionary/bisexual">Bisexual</a></li>
 <li> <a href="http://www.merriam-webster.com/dictionary/lesbian">Lesbian</a></li>
@@ -10,6 +33,6 @@
 <li> <a href="http://www.merriam-webster.com/dictionary/transexual">Transexual</a></li>
 <li> <a href="http://www.merriam-webster.com/dictionary/asexual">Asexual</a></li>
 <li> Add More</li>
-</uol>
-
+</ul>
+</div>
 </html>
