--- a/Genders.html
+++ b/Genders.html
@@ -1,13 +1,35 @@
-<link rel="stylesheet" type="text/css" href="Main.css">
 <html>
+	<head>
+		
+		<!-- Latest compiled and minified CSS -->
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+		
+		<!-- Optional theme -->
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+		
+		<!-- Latest compiled and minified JavaScript -->
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+		<link rel="stylesheet" type="text/css" href="style.css">
+	</head>
+<nav class="navbar navbar-default">
+						<div  class="collapse navbar-collapse">
+							<ul class="nav navbar-nav">    
+							<li><a href="index.html">Home</a></li>
+								<li><a href="Sexualities.html">Sexualities</a></li>
+								<li><a href="Genders.html">Genders</a></li>
+								<li><a href="StoriesPage.html">Stories</a></li>
+								<li><a href="News.html">LGBTQ+ In The News</a></li>
+							</ul>
+						</div>
+					</nav>
 
-
-
-<h2><uol> <text style=color:purple> DIFFERENT TYPES OF GENDERS</text></h2>
-
+				<div class="text">
+<h2><ul> <text style=color:white> DIFFERENT TYPES OF GENDERS</text></h2>
+Gender is what a person identifies themselves as. There are more than two genders(male and female). Here are some:
 <li> <a href="http://www.dictionary.com/browse/agender">Agender</a></li>
 <li> <a href="http://www.dictionary.com/browse/cisgender?s=t">Cisgender</a></li>
 <li>add more</li>
 
-</uol>
+</ul>
+</div>
 </html>
