--- a/index.html
+++ b/index.html
@@ -24,11 +24,12 @@
 					<br>
 					<nav class="navbar navbar-default">
 						<div  class="collapse navbar-collapse">
-							<ul class="nav navbar-nav">    
-								<li><a href="file:///mnt/castor/seas_home/w/wics09/Sexualities.html">Sexualities</a></li>
-								<li><a href="file:///mnt/castor/seas_home/w/wics09/Genders.html">Genders</a></li>
-								<li><a href="file:///mnt/castor/seas_home/w/wics09/StoriesPage.html">Stories</a></li>
-								<li><a href="file:///mnt/castor/seas_home/w/wics09/News.html">LGBTQ+ In The News</a></li>
+							<ul class="nav navbar-nav">  
+								<li><a href="index.html">Home</a></li>
+								<li><a href="Sexualities.html">Sexualities</a></li>
+								<li><a href="Genders.html">Genders</a></li>
+								<li><a href="StoriesPage.html">Stories</a></li>
+								<li><a href="News.html">LGBTQ+ In The News</a></li>
 							</ul>
 						</div>
 					</nav>	
