--- a/Sexualities.html
+++ b/Sexualities.html
@@ -32,7 +32,7 @@
 <li> <a href="http://www.merriam-webster.com/dictionary/pansexual">Pansexual</a></li>
 <li> <a href="http://www.merriam-webster.com/dictionary/transexual">Transexual</a></li>
 <li> <a href="http://www.merriam-webster.com/dictionary/asexual">Asexual</a></li>
-<li> Add More</li>
+<img src="http://65.media.tumblr.com/45ef111510cc619c95212e28f2319e03/tumblr_mtten5DwdO1rfwfq9o1_500.jpg">
 </ul>
 </div>
 </html>
